--- a/metacatui/src/main/webapp/js/themes/dataone/css/metacatui.css
+++ b/metacatui/src/main/webapp/js/themes/dataone/css/metacatui.css
@@ -2466,7 +2466,7 @@ img[src*="gstatic.com/"], img[src*="googleapis.com/"]  {
 
 /** sidr overrides **/
 	.sidr {
-		top: 96px;
+		top: 500px;
 		width: 150px;
 		background: none;
 		-webkit-box-shadow: none;
